# orbital-mechanics-simulation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/validation/: circular_two_body.csv  two_body_conservation.csv  validation_metrics.csv  validation_summary.json
scripts/: check_validation_evidence.py
src/orbital_mechanics/: __init__.py  __main__.py  cli.py  constants.py  dynamics.py  elements.py  evidence.py  propagation.py  validation.py
tests/: test_dynamics.py  test_elements.py  test_propagation.py  test_validation.py
