[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "orbital-mechanics-simulation"
version = "0.1.0"
description = "Deterministic orbital propagation with quantitative two-body and J2 validation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Charles Lucas" }]
keywords = ["astrodynamics", "orbital-mechanics", "simulation", "j2", "rk4"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
orbit-validate = "orbital_mechanics.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orbital_mechanics"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
